--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 node_modules
 .tmp
 npm-debug.log
+**/.terraform/*
+.terraform.lock.hcl
+*.tfstate
+*.tfstate.*
+crash.log
+tfplan
+* .tfplan
+* tfplan
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
